--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: "felixcdr"
+          username: "rmnhg"
           password: ${{ secrets.PAT }}
     -
         name: Build and push
@@ -40,4 +40,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/felixcdr/tp:latest
+          tags: ghcr.io/rmnhg/traceproducer:latest
